# Solana-Token-Escrow-Platform-with-zk-Compression-Support

./: .env.example  DEPLOYMENT_SUMMARY.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  package.json
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.js  server.ts
backend/src/database/: models.js
backend/src/middleware/: errorHandler.ts  validation.ts
backend/src/routes/: escrow.js  escrow.ts  health.ts
backend/src/services/: databaseService.ts  escrowService.js  solanaService.ts
contract/: Anchor.toml  Cargo.toml
contract/programs/funhi-escrow/src/: lib.rs
contract/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
docs/: HOW_IT_WORKS.md  environment-setup.md  missing-components-checklist.md  next-steps-summary.md  project-status.md
frontend/: package.json
scripts/: deploy.sh
