[package]
name = "funhi-escrow"
version = "0.1.0"
description = "Funhi Platform Escrow Smart Contract"
edition = "2021"
license = "MIT"
repository = "https://github.com/funhi-platform/escrow-system"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~1.16.0"
spl-token = "~4.0.0"
borsh = "~0.10.0"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }

[features]
no-entrypoint = []